# minnow54426.github.io

./: .gitignore  CLAUDE.md  CNAME  Makefile  README.md  Take it easy.html  _config.yml  animals.html  app.js  architecture.html  archives.html  authors.html  beautiful-landscape.html  categories.html  code.html  cryptography.html  food.html  generate_photo_pages.py  hello-world.html  index.html  music.html  my-favorite-song.html  my-first-python-script.html  my-photo-gallery.html  nature-gallery.html  nature.html  paint.html  pelicanconf.py  photo-categories.html  photo-gallery.html  polynomial-plotter.html  publishconf.py  rename_photos.sh  rename_photos_exif.py  styles.css  tags.html  test.html
code/groth16-demo/crates/circuits/: Cargo.toml
code/groth16-demo/crates/circuits/examples/: multiplier_demo.rs  range_proof_demo.rs
code/groth16-demo/crates/circuits/src/: multiplier.rs
code/groth16-demo/crates/qap/: Cargo.toml
code/groth16-demo/crates/qap/src/: lib.rs  polynomials.rs
code/groth16-demo/crates/r1cs/: Cargo.toml
code/zero_knowledge_proof_learn/useful_schemes/schnorr/: Cargo.toml  IMPLEMENTATION_COMPLETE.md  README.md  TEST_RESULTS.md
code/zero_knowledge_proof_learn/useful_schemes/schnorr/benches/: schnorr_bench.rs
code/zero_knowledge_proof_learn/useful_schemes/schnorr/docs/: design-2025-01-23-schnorr-bip340.md
code/zero_knowledge_proof_learn/useful_schemes/schnorr/docs/plans/: 2025-01-23-schnorr-bip340.md
code/zero_knowledge_proof_learn/useful_schemes/schnorr/examples/: basic_sign.rs  batch_verify.rs  test_batch_simple.rs  test_keypair.rs  test_single_batch.rs
code/zero_knowledge_proof_learn/useful_schemes/schnorr/src/: challenge.rs  error.rs  keypair.rs  lib.rs  nonce.rs  sign.rs  signature.rs  verify.rs
code/zero_knowledge_proof_learn/useful_schemes/schnorr/tests/: cross_validation.rs  integration_test.rs  property_tests.proptest-regressions  property_tests.rs
code/zero_knowledge_proof_learn/week10/: Cargo.toml  README.md  SUMMARY.md  prompt.md
code/zero_knowledge_proof_learn/week10/docs/plans/: 2025-01-27-zk-proof-artifacts-design.md  2025-01-27-zk-proof-artifacts-implementation.md
code/zero_knowledge_proof_learn/week10/examples/: test_circuit_type_serde.rs
code/zero_knowledge_proof_learn/week10/src/: artifacts.rs  cli.rs  error.rs  fileio.rs  lib.rs  main.rs  serialization.rs
code/zero_knowledge_proof_learn/week10/src/cli/: mod.rs  prove.rs  setup.rs  verify.rs
code/zero_knowledge_proof_learn/week10/tests/: integration_test.rs
code/zero_knowledge_proof_learn/week11/: Cargo.toml  README.md  SUMMARY.md  prompt.md  test_api.rs
code/zero_knowledge_proof_learn/week11/book/book/: 03-qap.html  04-pairings.html  05-trusted-setup.html  06-proof-generation.html  07-proof-verification.html  404.html  searchindex.js
code/zero_knowledge_proof_learn/week11/book/src/: 00-introduction.md  01-math-background.md  02-r1cs.md
code/zero_knowledge_proof_learn/week11/crates/circuits/examples/: cubic_demo.rs  field_operations.rs  hash_preimage_demo.rs  merkle_demo.rs  multiplier_demo.rs
code/zero_knowledge_proof_learn/week11/crates/circuits/src/: lib.rs
code/zero_knowledge_proof_learn/week11/crates/groth16/: BENCHMARK_RESULTS.md  Cargo.toml
code/zero_knowledge_proof_learn/week11/crates/groth16/benches/: batch_verify.rs
code/zero_knowledge_proof_learn/week11/crates/groth16/src/: error.rs  lib.rs  prove.rs
code/zero_knowledge_proof_learn/week11/crates/math/: Cargo.toml
code/zero_knowledge_proof_learn/week11/crates/math/src/: pairing_tests.rs  polynomial.rs  polynomial_tests.rs
code/zero_knowledge_proof_learn/week11/crates/qap/src/: divisibility.rs  error.rs  polynomials.rs
code/zero_knowledge_proof_learn/week11/crates/r1cs/src/: constraint.rs  lib.rs  witness.rs
code/zero_knowledge_proof_learn/week11/docs/plans/: 2025-01-11-groth16-implementation.md  2025-01-13-batch-verify-and-tutorial-book-implementation.md  2025-01-13-batch-verify-and-tutorial-book.md  2026-01-28-zk-membership-capstone-design.md
code/zero_knowledge_proof_learn/week2/code/merkle-rs/: Cargo.toml  README.md
code/zero_knowledge_proof_learn/week2/code/merkle-rs/benches/: merkle_bench.rs
code/zero_knowledge_proof_learn/week2/code/merkle-rs/examples/: dashboard_demo.rs  interactive_dashboard.rs  phase2_demo.rs  quick_test.rs  security_demo.rs
code/zero_knowledge_proof_learn/week2/code/merkle-rs/src/: lib.rs
code/zero_knowledge_proof_learn/week2/code/merkle-rs/src/security/: advanced_attacks.rs  attack_simulator.rs  binding_property_tester.rs  collision_tester.rs  dashboard.rs  mod.rs  property_based_harness.rs  (+2 more)
code/zero_knowledge_proof_learn/week2/code/merkle-rs/tests/: security_integration.rs
code/zero_knowledge_proof_learn/week5/code/: Cargo.toml  README.md  prompt.md
code/zero_knowledge_proof_learn/week5/code/docs/: architecture.md
code/zero_knowledge_proof_learn/week5/code/docs/plans/: 2025-01-07-forks-consensus-refactor.md
code/zero_knowledge_proof_learn/week5/code/src/: lib.rs
code/zero_knowledge_proof_learn/week5/code/src/core/: block.rs  chain.rs  mod.rs  state.rs  tx.rs  types.rs
code/zero_knowledge_proof_learn/week5/code/tests/: integration_test.rs
code/zero_knowledge_proof_learn/week8/code/: Cargo.toml  README.md
code/zero_knowledge_proof_learn/week8/code/benches/: circuit_benchmarks.rs  comparison_benchmarks.rs
code/zero_knowledge_proof_learn/week8/code/examples/: full_demo.rs  identity_proof.rs
code/zero_knowledge_proof_learn/week8/code/src/: circuit.rs  error.rs  groth16.rs  lib.rs
code/zero_knowledge_proof_learn/week8/code/src/identity/: mod.rs
code/zero_knowledge_proof_learn/week8/code/src/membership/: mod.rs
code/zero_knowledge_proof_learn/week8/code/src/privacy/: mod.rs
code/zero_knowledge_proof_learn/week8/code/src/utils/: fields.rs  mod.rs  serialization.rs
code/zero_knowledge_proof_learn/week8/code/tests/: circuit_trait_tests.rs  error_tests.rs  groth16_prove_tests.rs  groth16_setup_tests.rs  identity_basic_tests.rs  integration_tests.rs  membership_basic_tests.rs  privacy_basic_tests.rs  serialization_tests.rs
(+312 files in other folders)
