[package]
name = "zk-proof-artifacts"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "CLI tool for ZK-SNARK proof artifacts with JSON serialization"

[dependencies]
# ZK library from Week 8
zk-groth16-snark = { path = "../week8/code" }

# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Timing (for benchmarking)
humantime = "2.1"

[dev-dependencies]
# For creating temporary files in tests
tempfile = "3.8"

[[bin]]
name = "zk-artifacts"
path = "src/main.rs"
