[workspace]
members = [
    "crates/math",
    "crates/r1cs",
    "crates/qap",
    "crates/groth16",
    "crates/circuits",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Groth16 Demo Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/boycrypt/website"

[workspace.dependencies]
# Core crypto primitives
ark-ff = { version = "0.4", features = ["std"] }
ark-ec = { version = "0.4", features = ["std"] }
ark-bn254 = { version = "0.4", features = ["std"] }
ark-poly = { version = "0.4", features = ["std"] }
ark-groth16 = { version = "0.4", features = ["std"] }
ark-serialize = { version = "0.4", features = ["std"] }
ark-relations = { version = "0.4", features = ["std"] }
ark-r1cs-std = { version = "0.4", features = ["std"] }
ark-crypto-primitives = { version = "0.4", features = ["std", "r1cs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Testing
proptest = "1.0"

# Documentation
mdbook = "0.4"
