[package]
name = "groth16-r1cs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
groth16-math = { path = "../math" }

ark-ff = { workspace = true }
ark-ec = { workspace = true }

serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
ark-bn254 = { workspace = true }
