[package]
name = "schnorr"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "BIP340 Schnorr signatures on secp256k1"
license = "MIT OR Apache-2.0"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
k256 = { version = "0.13", features = ["arithmetic", "serde"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"], optional = true }
rand_core = "0.6"
zeroize = "1.5"
subtle = "2.4"

# Pin problematic transitive dependencies
base64ct = "=1.6.0"

[dev-dependencies]
rand = "0.8"
hex = "0.4"
proptest = "1.0"
criterion = "0.5"
secp256k1 = { version = "0.27", default-features = false, features = ["std"] }

[[bench]]
name = "schnorr_bench"
harness = false
