[package]
name = "toychain-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tx-rs = { path = "../../week3/code" }
ed25519-dalek = { version = "1.0", features = ["serde"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"

[dev-dependencies]
rand = "0.7"

[lib]
name = "toychain_rs"
path = "src/lib.rs"
