[package]
name = "zk-groth16-snark"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Groth16 SNARK library with identity, membership, and privacy circuits"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/zk-groth16-snark"
keywords = ["zk-snark", "groth16", "zero-knowledge", "cryptography"]
categories = ["cryptography"]

[dependencies]
# ZK primitives
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["r1cs"] }
ark-ff = "0.4"
ark-ec = "0.4"
ark-bls12-381 = "0.4"
ark-bn254 = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-snark = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Randomness
rand = "0.8"

# Hashing
sha2 = "0.10"

[dev-dependencies]
# Testing
proptest = "1.0"
criterion = "0.5"

[features]
default = ["std"]
std = []

[[bench]]
name = "circuit_benchmarks"
harness = false

[[bench]]
name = "comparison_benchmarks"
harness = false
