[package]
name = "groth16"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
groth16-math = { path = "../math" }
groth16-r1cs = { path = "../r1cs" }
groth16-qap = { path = "../qap" }

ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-bn254 = { workspace = true }
ark-poly = { workspace = true }
ark-groth16 = { workspace = true }  # Reference implementation for comparison
ark-serialize = { workspace = true }

serde = { workspace = true }
serde_bytes = "0.11"
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
proptest = { workspace = true }
serde_json = "1.0"
criterion = "0.5"

[[bench]]
name = "batch_verify"
harness = false
