[package]
name = "merkle_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
statrs = "0.16"
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"
subtle = "2.4"
ndarray = "0.15"
plotters = "0.3"

[[bench]]
name = "merkle_bench"
harness = false
